refactored adding inputs to history object. Now only 'nstdArrayRef' is used.

--- a/calc.html
+++ b/calc.html
@@ -10,7 +10,7 @@
                 <div class="calcBtn"><input type="button" name="eight" value="8" onclick="calcObj.checkIfNeg(8)"></div>
                 <div class="calcBtn"><input type="button" name="nine" value="9" onclick="calcObj.checkIfNeg(9)"></div>
                 <div class="calcBtn"><input type="button" class ="operator" name="plus" value="+" onclick="calcObj.checkHistory('+')"></div>
-                <div class="calcBtn"><input type="button" id="clear" name="clear" value="c" onclick="calcObj.clear()"></div>
+                <div class="calcBtn"><input type="button" id="clear" name="clear" value="c" onclick="calcObj.calcDisplay('')"></div>
             </div>
             <div class="calcBtnRow">
                 <div class="calcBtn"><input type="button" name="four" value="4" onclick="calcObj.checkIfNeg(4)"></div>
